--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,12 @@
     border-radius: 12px;
     border: 2px solid #000;
 }
+
+.box .image{
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    background-image: url("image.jpg");
+}
