--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,23 @@
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+}
+
+.hero{
+    margin-top: 100px;
+}
+
 .container{
     display: flex;
     flex-wrap: wrap;
+    gap: 5px;
     width: 420px;
     justify-content: center;
 }
@@ -9,8 +26,8 @@
     position: relative;
     height: 160px;
     width: 160px;
-    border-radius: 12px;
-    border: 2px solid #000;
+    border-radius:10px;
+    border: 1px solid #616060;
 }
 
 .box .image{
