Added the footer and made App to be SEO friendly

--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,13 @@ h1{
 .box.hovered{
     border: 2px dashed #333;
 }
+
+footer{
+    text-align: center;
+    margin-top: 20px;
+}
+
+footer p{
+    font-size: 12px;
+}
+
